# floodit

./: .editorconfig  .gitignore  README.md  floodit.doap  go.mod  go.sum  local.sh  local_run.sh  meson.build
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yaml
build-aux/flatpak/: go.mod.yml  io.github.tfuxu.floodit.json  io.github.tfuxu.gotk4_meson.json  modules.txt
data/: flood_it.gresource.xml  floodit.gresource.xml  io.github.tfuxu.flood_it.appdata.xml.in.in  io.github.tfuxu.flood_it.desktop.in.in  io.github.tfuxu.flood_it.gschema.xml.in  io.github.tfuxu.floodit.desktop.in.in  io.github.tfuxu.floodit.gschema.xml.in  io.github.tfuxu.floodit.metainfo.xml.in.in  meson.build  style.css
data/ui/: color_keyboard.blp  custom_mode_page.blp  difficulty_page.blp  game_page.blp  game_rules_dialog.blp  game_rules_page.blp  help_overlay.blp  main_window.blp  main_window.ui  meson.build  result_page.blp  shortcuts_dialog.blp  starting_view.blp
po/: LINGUAS  POTFILES  floodit.pot  fr.po  meson.build  nl.po  pt_BR.po  tr.po
src/: main.go  meson.build
src/backend/: backend.go
src/backend/utils/: colors.go  strings.go
src/constants/: constants.go.in
src/views/: custom_mode_page.go  difficulty_page.go  game_page.go  game_rules_dialog.go  game_rules_page.go  main_window.go  result_page.go  starting_view.go
src/views/about/: about_dialog.go
src/views/board/: game_board.go
src/views/keyboard/: view.go
